# genserver

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: build-and-test.yml  coverage.yml  publish.yml
codegen/: Cargo.toml
codegen/src/: lib.rs  registry.rs
src/: joinset.rs  lib.rs
tests/: test.rs
