[package]
name = "genserver"
version = "0.1.16"
edition = "2021"
authors = ["Brenden Matthews <brenden@brndn.io>"]
categories = ["asynchronous", "concurrency"]
description = "genserver is an Elixir inspired async actor library"
documentation = "https://docs.rs/genserver"
keywords = ["async", "actors", "concurrency", "elixir", "erlang"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/brndnmtthws/genserver"

# 1.65 or newer required for GATs
rust = "1.65"

[dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
genserver_codegen = { version = "0.1.15", path = "codegen" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"

[workspace]

members = ["codegen"]
