[package]
name = "genserver_codegen"
version = "0.1.5"
edition = "2021"
description = "code generation for genserver crate"
license = "MIT"
authors = ["Brenden Matthews <brenden@brndn.io>"]
documentation = "https://docs.rs/genserver"
repository = "https://github.com/brndnmtthws/genserver"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
